# camera-capture-v4l2-rs

./: .gitmodules  Cargo.toml  README.md
src/: main.rs
ui/: Cargo.toml
ui/src/: main.rs
