[package]
name = "camera-capture-v4l2-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-video = "0.1.1"
eframe = "0.24.1"
egui_extras = "0.24.1"
epaint = "0.24.1"
image = { version = "0.24.7", features = ["jpeg", "png"] }
anyhow = "1.0.75"
